--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,12 @@ keywords = ["automation", "rust"]
 license = "MIT"
 
 [dependencies]
+enigo = "0.6.1"
+serde = { version = "1.0.219", features = ["derive"] }
+tokio = { version = "1.47.1", features = ["full"] }
+
+[dev-dependencies]
+actix-web = "4.11.0"
+anyhow = "1.0.99"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
